syntax="proto3";

option go_package = "./proto";


package greet_service;

service GreetService {
  //Запрос и ответ
  rpc SayGreeting (NoPram) returns (GreetingResponse);

  //Серверная потоковая передача — клиент отправляет запрос и получает поток ответа
  rpc SayGreetingServerStreaming (NamesList) returns (stream GreetingResponse);

  //Клиентская потоковая передача — клиент отправляет поток запросов и получает ответ
  rpc SayGreetingClientStreaming (stream GreetingRequest) returns (MessagesList);

  //Двунаправленный — клиент и сервер общаются друг с другом с помощью потока
  rpc SayGreetingBidirectionalStreaming (stream GreetingRequest) returns (stream GreetingResponse);
}

//Сообщение без параметров
message NoPram{}

// Сообщение необходимое для запроса
message GreetingRequest {
  string name = 1;
}

// Сообщение необходимое для ответа
message GreetingResponse {
  string message = 1;
}

// Сообщение в виде массива
message NamesList {
  repeated string names = 1; //массив имен
}

// Список сообщений
message MessagesList {
  repeated string messages = 1; //Массив сообщений
}



